fix: gap not supported in some browser

--- a/src/pages/sections/contact.css
+++ b/src/pages/sections/contact.css
@@ -77,6 +77,12 @@
     padding-right: 130px;
   }
 
+  .Contact .description {
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
 }
 
 @media only screen and (min-width: 1200px) {
