--- a/src/pages/sections/hero.css
+++ b/src/pages/sections/hero.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 29px;
-  margin-bottom: 250px;
+  margin-bottom: 100px;
 }
 
 a {
@@ -56,7 +56,7 @@ a {
 }
 
 .hero-title {
-margin-top: 200px;
+margin-top: 130px;
 font-family: Futura-Bold;
 font-size: 3.2em;
 color: #9FEDEA;
@@ -116,13 +116,13 @@ text-decoration: none;
 .menu-icon {
   display: block;
   margin-right: 29px;
-  margin-top: 52px;
-  position: absolute;
+  margin-top: 52px;;
   bottom: 0;
   right: 0;
   margin-bottom: 40px;
   width: 50px;
   outline: none;
+  align-self: flex-end;
 }
 
 .menu-icon svg {
@@ -205,6 +205,22 @@ text-decoration: none;
     display: none;
   }
 
+  .hero-title {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .hero-subtitle {
+    padding-left: 0;
+    padding-right: 0;
+    
+  }
+
+  .hero-details {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
 
 }
 
@@ -215,7 +231,7 @@ text-decoration: none;
   }
 
   .hero-subtitle {
-    width: 80%;
+    width: 90%;
   }
 
   .hero-details {
