--- a/src/pages/sections/projects-main.css
+++ b/src/pages/sections/projects-main.css
@@ -99,7 +99,7 @@ padding: 0 25px;
   }
 
   .ProjectsMain .project-description {
-    margin-top: 30px;
+    margin-top: 60px;
     padding: 0;
     text-align: left;
   }
@@ -111,7 +111,7 @@ padding: 0 25px;
   .project {
     display: flex;
     flex-direction: row;
-    margin-top: 40px;
+    margin-top: 10px;
 
   }
 
